Menu Responsive, Segundo Avance

--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <title>Fotografia</title>
   </head>
   <body>
-    <header id="cabecera">
-      <label>Comenzando con la Fotografía</label>
-      <nav id="menu">
+    <!-- Cabecera del documento -->
+    <section id="cabecera">
+      <header>
+        <label>Comenzando con la Fotografía</label>
+        <!--Menu Responsive -->
+        <nav id="menu_responsive">
+          <a href="index.html">Inicio</a>
+          <a href="paisajes.html">Paisajes</a>
+          <a href="retratos.html">Retratos</a>
+        </nav>
+      </header>
+      <!--Menu Desktop-->
+      <nav id="menu_desktop">
         <a id="retratos" href="retratos.html">Retratos</a>
         <a id="paisajes" href="paisajes.html">Paisajes</a>
         <a id="inicio" href="index.html">Inicio</a>
       </nav>
-    </header>
+    </section>
+
+    <!-- Seccion Central -->
+
     <section id="central">
 
       <img id="imagen_central" src="img/central.jpg" alt="Foto Roatan">
