--- a/index.html
+++ b/index.html
@@ -28,19 +28,51 @@
     </section>
 
     <!-- Seccion Central -->
-
     <section id="central">
 
       <img id="imagen_central" src="img/central.jpg" alt="Foto Roatan">
     </section>
     <section id="secundario">
       <article id="art_paisaje">
+        <img src="img/paisaje.jpg" alt="">
+        <br>
+        <a href="#">Paisajes</a>
 
       </article>
       <article id="art_retrato">
-
+        <img src="img/retrato.jpg" alt="">
+        <br>
+        <a href="#">Retratos</a>
       </article>
     </section>
+    <footer id="pie">
+      <div class="">
+        <h3>Contacto</h3>
+        <p>abaquihatake@gmail.com <br>
+           Tegucigalpa, Honduras <br>
+        +504 3239-8665
+        </p>
+
+      </div>
+      <div class="">
+        <h3>Término</h3>
+        <p>Conoce nuestros términos y condiciones.</p>
+
+      </div>
+      <div class="">
+        <h3>Redes Sociales</h3>
+        <p>Redes Sociales</p>
+
+      </div>
+      <div class="">
+        <h3>Derechos</h3>
+        <p>Abner Villanueva <br>
+           © CopyRight 2017
+        </p>
+
+      </div>
+
+    </footer>
 
   </body>
 </html>
