--- a/index.html
+++ b/index.html
@@ -8,71 +8,68 @@
     <title>Fotografia</title>
   </head>
   <body>
-    <!-- Cabecera del documento -->
-    <section id="cabecera">
-      <header>
-        <label>Comenzando con la Fotografía</label>
-        <!--Menu Responsive -->
-        <nav id="menu_responsive">
-          <a href="index.html">Inicio</a>
-          <a href="paisajes.html">Paisajes</a>
-          <a href="retratos.html">Retratos</a>
-        </nav>
-      </header>
-      <!--Menu Desktop-->
-      <nav id="menu_desktop">
-        <a id="retratos" href="retratos.html">Retratos</a>
-        <a id="paisajes" href="paisajes.html">Paisajes</a>
-        <a id="inicio" href="index.html">Inicio</a>
-      </nav>
-    </section>
+    <div id="contenido">
+        <!-- Cabecera del documento -->
+        <section id="cabecera">
+          <header>
+            <label>Comenzando con la Fotografía</label>
+            <!--Menu Responsive -->
+            <nav id="menu_responsive">
+              <a href="index.html">Inicio</a>
+              <a href="paisajes.html">Paisajes</a>
+              <a href="retratos.html">Retratos</a>
+            </nav>
+          </header>
+          <!--Menu Desktop-->
+          <nav id="menu_desktop">
+            <a id="retratos" href="retratos.html">Retratos</a>
+            <a id="paisajes" href="paisajes.html">Paisajes</a>
+            <a style="text-decoration:none;" id="inicio" href="index.html">Inicio</a>
+          </nav>
+        </section>
 
-    <!-- Seccion Central -->
-    <section id="central">
-
-      <img id="imagen_central" src="img/central.jpg" alt="Foto Roatan">
-    </section>
-    <section id="secundario">
-      <article id="art_paisaje">
-        <img src="img/paisaje.jpg" alt="">
-        <br>
-        <a href="#">Paisajes</a>
-
-      </article>
-      <article id="art_retrato">
-        <img src="img/retrato.jpg" alt="">
-        <br>
-        <a href="#">Retratos</a>
-      </article>
-    </section>
-    <footer id="pie">
-      <div class="">
-        <h3>Contacto</h3>
-        <p>abaquihatake@gmail.com <br>
-           Tegucigalpa, Honduras <br>
-        +504 3239-8665
-        </p>
-
+        <!-- Seccion Central -->
+        <section id="central">
+          <img id="imagen_central" src="img/central.jpg" alt="Foto Roatan">
+        </section>
+        <section id="secundario">
+          <article id="art_paisaje">
+            <img src="img/paisaje.jpg" alt="Imagen Paisaje">
+            <br>
+            <a href="paisajes.html">Paisajes</a>
+          </article>
+          <article id="art_retrato">
+            <img src="img/retrato.jpg" alt="Imagen Retrato">
+            <br>
+            <a href="retratos.html">Retratos</a>
+          </article>
+        </section>
+        <footer id="pie">
+          <div class="">
+            <h3>Contacto</h3>
+            <p>abaquihatake@gmail.com <br>
+               Tegucigalpa, Honduras <br>
+               +504 3239-8665
+            </p>
+          </div>
+          <div class="">
+            <h3>Término</h3>
+            <p>Conoce nuestros términos y condiciones.</p>
+          </div>
+          <div class="">
+            <h3>Redes Sociales</h3>
+            <p>Comparte en nuestras redes. <br>
+            <img src="img/fb.png" alt="Logo Facebook"> ComenzandoFotografía <br>
+            <img src="img/twit.png" alt="Logo Twitter"> @ComenzandoFotografía <br>
+            <img src="img/insta.png" alt="Logo Instagram"> ComenzandoFotografía</p>
+          </div>
+          <div class="">
+            <h3>Derechos</h3>
+            <p>Abner Villanueva <br>
+               © CopyRight 2017
+            </p>
+          </div>
+        </footer>
       </div>
-      <div class="">
-        <h3>Término</h3>
-        <p>Conoce nuestros términos y condiciones.</p>
-
-      </div>
-      <div class="">
-        <h3>Redes Sociales</h3>
-        <p>Redes Sociales</p>
-
-      </div>
-      <div class="">
-        <h3>Derechos</h3>
-        <p>Abner Villanueva <br>
-           © CopyRight 2017
-        </p>
-
-      </div>
-
-    </footer>
-
   </body>
 </html>
