--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <section id="cabecera">
           <header>
             <label>Comenzando con la Fotografía</label>
-            <!--Menu Responsive -->
+            <!--Menu Movil -->
             <nav id="menu_responsive">
-              <a href="index.html">Inicio</a>
+              <a style="text-decoration:none;" href="index.html">Inicio</a>
               <a href="paisajes.html">Paisajes</a>
               <a href="retratos.html">Retratos</a>
             </nav>
@@ -32,6 +32,8 @@
         <section id="central">
           <img id="imagen_central" src="img/central.jpg" alt="Foto Roatan">
         </section>
+
+        <!-- Seccion Secundaria -->
         <section id="secundario">
           <article id="art_paisaje">
             <img src="img/paisaje.jpg" alt="Imagen Paisaje">
@@ -44,6 +46,9 @@
             <a href="retratos.html">Retratos</a>
           </article>
         </section>
+
+
+        <!-- Pie de Pagina -->
         <footer id="pie">
           <div class="">
             <h3>Contacto</h3>
