--- a/retratos.html
+++ b/retratos.html
@@ -3,12 +3,84 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="Abner Villanueva">
-      <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Retratos</title>
   </head>
   <body>
+    <div id="contenido">
+        <!-- Cabecera del documento -->
+        <section id="cabecera">
+          <header>
+            <label>Comenzando con los Retratos</label>
+            <!--Menu Responsive -->
+            <nav id="menu_responsive">
+              <a href="index.html">Inicio</a>
+              <a href="paisajes.html">Paisajes</a>
+              <a style="text-decoration:none;" href="retratos.html">Retratos</a>
+            </nav>
+          </header>
+          <!--Menu Desktop-->
+          <nav id="menu_desktop">
+            <a style="text-decoration:none;" id="retratos" href="retratos.html">Retratos</a>
+            <a id="paisajes" href="paisajes.html">Paisajes</a>
+            <a id="inicio" href="index.html">Inicio</a>
+          </nav>
+        </section>
 
+        <!-- Fotografias de Retratos -->
+        <section id="cont_paisajes">
+          <div class="paq_paisajes1">
+            <article id="p1">
+              <img id="blur" src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+            <article id="p2">
+              <img class="eg" src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+            <article id="p3">
+              <img id="sepia" src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+          </div>
+          <div class="paq_paisajes2">
+            <article id="p4">
+              <img class="eg" src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+            <article id="p5">
+              <img src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+            <article id="p6">
+              <img class="eg" src="img/retrato.jpg" alt="Imagen retrato">
+            </article>
+          </div>
+        </section>
 
+        <!-- Pie de Pagina -->
+        <footer id="pie">
+          <div class="">
+            <h3>Contacto</h3>
+            <p>abaquihatake@gmail.com <br>
+               Tegucigalpa, Honduras <br>
+               +504 3239-8665
+            </p>
+          </div>
+          <div class="">
+            <h3>Término</h3>
+            <p>Conoce nuestros términos y condiciones.</p>
+          </div>
+          <div class="">
+            <h3>Redes Sociales</h3>
+            <p>Comparte en nuestras redes. <br>
+            <img src="img/fb.png" alt="Logo Facebook"> ComenzandoFotografía <br>
+            <img src="img/twit.png" alt="Logo Twitter"> @ComenzandoFotografía <br>
+            <img src="img/insta.png" alt="Logo Instagram"> ComenzandoFotografía</p>
+          </div>
+          <div class="">
+            <h3>Derechos</h3>
+            <p>Abner Villanueva <br>
+               © CopyRight 2017
+            </p>
+          </div>
+        </footer>
+      </div>
   </body>
 </html>
